--- a/style.css
+++ b/style.css
@@ -102,6 +102,7 @@ header .current a{
 /* SHOWCASE */
 
 
+
 #showcase{
   min-height: 400px;
   background:url('../img/showcase2.jpg') no-repeat 0 -300px;
@@ -154,6 +155,7 @@ header .current a{
 
 /* BOXES */
 
+
 #boxes{
   margin-top: 20px;
 }
@@ -167,6 +169,18 @@ header .current a{
 
 #boxes img{
   width: 90px;
+}
+
+
+#Profil img{
+  width: 200px;
+  float: left;
+  padding-right: 20px;
+  padding-top: 20px;
+  border-radius: 50px;
+  border-spacing: 50px;
+  border-color: black;
+
 }
 
 /* sidebar */
@@ -191,10 +205,22 @@ article#main1{
 /* FOOTER */
 
 footer{
+  bottom: auto;
   padding: 20px;
   background-color: #6B85E9;
-  margin-top: 20px;
+  margin-top: 100px;
   color: white;
   text-align: center;
 
+}
+
+footer img{
+  width: 50px;
+  height: 50px;
+
+}
+
+#footer-social{
+  display: inline-block;
+  text-decoration: none;
 }
